# balde-album

./: .gitignore  README.md  configure.ac
src/: Makefile.am  balde-album.c  balde-album.h  exif.c  exif.h  image.c  image.h  loader.c  loader.h  template.c  template.h  utils.c  utils.h  views.c  views.h
tests/: Makefile.am  check_foo.c
